--- a/labs/guide_master.adoc
+++ b/labs/guide_master.adoc
@@ -136,7 +136,7 @@ Welcome! See 'oc help' to get started.
 
 The OpenShift CLI has been successfully configured and ready for use in the lab!
 
-==== *OpenShift Web Console*
+=== OpenShift Web Console
 
 OpenShift features a rich user interface for managing resources on the platform.
 
@@ -160,7 +160,7 @@ image::ocp-catalog.png[Request GUID]
 
 The primary source of content for this lab is the IoT Serverless project repository.  
 
-*Project location:* https://github.com/sabre1041/iot-serverless
+*Project location:* link:https://github.com/sabre1041/iot-serverless[https://github.com/sabre1041/iot-serverless]
 
 Navigate to the `/home/lab-user` folder and clone the lab repository. Once cloned navigate into the `iot-serverless` directory:
 
@@ -203,8 +203,6 @@ You can add applications to this project with the 'new-app' command. For example
     oc new-app centos/ruby-22-centos7~https://github.com/openshift/ruby-ex.git
 
 to build a new example application in Ruby.
-
-$ oc process -f https://raw.githubusercontent.com/projectodd/openwhisk-openshift/master/persistent-template.yml | oc create -f -
 ----
 
 Deploy OpenWhisk by instantiating the template
@@ -225,11 +223,12 @@ $ watch oc get pods
 
 Once all pods are in the “Running” or “Completed state”, hit CTRL+C to break the “watch” command. +
 
+NOTE: Pods may initially report in Error status. This condition should resolve itself in a few moments.
+
 Check the status of deployment:
 
 [source,bash]
 ----
-
 $ oc get pods
 
 NAME                                          READY     STATUS      RESTARTS   AGE
@@ -255,94 +254,98 @@ The system is ready when the controller recognizes the invoker as healthy:
 [source,bash]
 ----
 $ oc logs -f controller-0 | grep "invoker status changed"
-----
 
-Should result in a message like invoker status changed to 0 -> Healthy
-
-[source,bash]
-----
 [INFO] [#sid_121] [InvokerPool] invoker status changed to 0 -> UnHealthy
 [INFO] [#sid_121] [InvokerPool] invoker status changed to 0 -> Healthy
 ----
 
-=== Verify deployment using OpenShift web console
-* Navigate to the following url in the browser:
+OpenWhisk has been successfully deployed when `0 -> Healthy` appears in the log above
 
-https://infranode-<GUID>.generic.opentlc.com:8443
+
+=== Verify OpenWhisk Deployment using OpenShift web console
+
+Navigate to the following url in the browser:
+
+link:https://infranode-<GUID>.generic.opentlc.com:8443[https://infranode-<GUID>.generic.opentlc.com:8443]
 
 TIP: OpenShift web UI access url is provided in the screen splash when you ssh into the system
 
-* Click on the project name (OpenWhisk) in the upper right corner. A successful deployment will look like:
+Click on the project name (OpenWhisk) in the upper right corner. A successful deployment will look like the following:
 
-image::image5.png[]
+image::openwhisk-deployment-ui.png[]
 
-== Configure wsk CLI
-wsk is the cli to interact with OpenWhisk services and has already been downloaded on this system.  wsk needs to be to be configured to be able to interact with OpenWhisk deployment above.
+== Configure the OpenWhisk CLI
 
-* Use the following commands to configure wsk:
+`wsk` is the CLI to interact with OpenWhisk services which has already been downloaded on this system.  The `wsk` CLI needs to be to be configured to be able to interact with OpenWhisk deployment.
+
+Use the following commands to configure wsk:
 
 [source,bash]
 ----
 $ AUTH_SECRET=$(oc get secret whisk.auth -o yaml | grep "system:" | awk '{print $2}' | base64 --decode)
 $ wsk property set --auth $AUTH_SECRET --apihost $(oc get route/openwhisk --template="{{.spec.host}}")
 ----
+
 Successful configuration of wsk will show following output:
 
 [source,bash]
 ----
 $ wsk property set --auth $AUTH_SECRET --apihost $(oc get route/openwhisk --template="{{.spec.host}}")
 ok: whisk auth set. Run 'wsk property get --auth' to see the new value.
-ok: whisk API host set to openwhisk-openwhisk.129.146.92.21.xip.io
+ok: whisk API host set to openwhisk-openwhisk.apps-<GUID>.generic.opentlc.com
 ----
 
 IMPORTANT: Use the -i option with wsk to avoid the validation error triggered by the self-signed cert in the nginx service.
 
-=== Validate wsk configuration
-* Use the following command validate wsk is operational:
+=== Validate OpenWhisk CLI configuration
+
+Use the following command validate the `wsk` CLI is operational:
 
 [source,bash]
 ----
 $ wsk -i list
 ----
 
-
-
-
+A list of entities in the _default_ namespace will be displayed.
 
 = Preparing the Lab Environment
 
-Now that the OpenShift and OpenWhisk tooling has been set up, let’s start to build the solution!
+Now that the OpenShift and OpenWhisk tooling have been set up, let’s start to build the solution!
 
-* First, create a new project in OpenShift that will be the workspace for the resources being deployed in the lab
+First, create a new project in OpenShift that will be the workspace for the resources being deployed in this lab.
 
 [source,bash]
 ----
 $ oc new-project iot-serverless --display-name="IoT Serverless" --description="Serverless technologies to manage and process Internet of Things (IoT) assets"
+
+Now using project "iot-serverless" on server "https://infranode-<GUID>.generic.opentlc.com:8443".
+
+You can add applications to this project with the 'new-app' command. For example, try:
+
+    oc new-app centos/ruby-22-centos7~https://github.com/openshift/ruby-ex.git
 ----
 
-* Add admin user as admin to access the projects with OpenShift web console:
+== Deploying and Populating MongoDB
 
-source,bash]
-----
-$ oc adm policy add-role-to-user admin admin
-----
-
-
-= Deploying and Populating MongoDB
-
-MongoDB is a popular non relational database (NoSQL). As asset readings are received, their values are stored for for retrieval afterward.
+link:https://www.mongodb.com/[MongoDB] is a popular non relational database (NoSQL). As asset readings are received, their values are stored for for retrieval afterward.
 
 OpenShift provides support for MongoDB and includes templates to streamline the deployment.
 
-* Execute the following command to instantiate the template which will create a new user and set the password to iot-serverless along with a database also called iotserverless.
+Execute the following command to instantiate the template which will create a new user and set the password to _iot-serverless_ along with a database also called _iotserverless_.
 
 [source,bash]
 ----
 $ oc process -p MONGODB_USER=iot-serverless -p MONGODB_PASSWORD=iot-serverless MONGODB_DATABASE=iotserverless openshift//mongodb-persistent | oc apply -f-
+
+secret "mongodb" created
+service "mongodb" created
+persistentvolumeclaim "mongodb" created
+deploymentconfig "mongodb" created
 ----
+
 In a few moments, the MongoDB database will be running. +
 
-* Confirm that it is running by viewing the list of running pods using the following commands:
+Confirm that it is running by viewing the list of running pods using the following commands:
 
 [source,bash]
 ----
@@ -351,28 +354,35 @@ $ oc get pods
 NAME              READY     STATUS    RESTARTS   AGE
 mongodb-1-x75j8   1/1       Running   0          3m
 ----
+
 A READY column indicating 1/1 denotes the service is ready and available
 
-To provide additional information about each of the assets along with supporting later portions of the lab, a MongoDB collection needs to be populated containing these resources. To properly seed the database, an OpenShift job can be used. A job is an OpenShift pod that runs to completion, unlike a ReplicationController which will ensure a set number of replicas are constantly running.
+To provide additional information about each of the assets along with supporting later portions of the lab, a MongoDB link:https://docs.mongodb.com/manual/core/databases-and-collections/#collections[collection] needs to be populated containing these resources. To properly seed the database, an link:https://docs.openshift.com/container-platform/latest/dev_guide/jobs.html[OpenShift job] can be used. A job is an OpenShift pod that runs to completion, unlike a ReplicationController which will ensure a set number of replicas are constantly running.
 
 A template is available to seed the database and contains the following resources:
-A ConfigMap containing the values to be added to a newly created collection
-A job that will execute the mongoinport command to import the values contained in the ConfigMap
 
-* From the root of the project, execute the following command:
+* A ConfigMap containing the values to be added to a newly created collection
+* A job that will execute the link:mongoinport[https://docs.mongodb.com/manual/reference/program/mongoimport/] command to import the values contained in the ConfigMap
+
+From the root of the project, execute the following command:
 
 [source,bash]
 ----
 $ oc process -f applier/templates/mongodb-database-seed.yml | oc apply -f-
+
+configmap "mongodb-seed" created
+job "mongodb-database-seed-stt8a" created
 ----
+
 The ConfigMap and Job will be created.
 
-* Use the following command to track the state of the job.
+Use the following command to track the state of the job.
 
 [source,bash]
 ----
 $ watch oc get pods
 ----
+
 When the pod with the name beginning with “mongodb-database-seed” has a status of “Completed”, hit CTRL+C to exit the “watch” command.
 
 [source,bash]
@@ -381,69 +391,96 @@ NAME                                READY     STATUS      RESTARTS   AGE
 mongodb-1-x75j8                     1/1       Running     0          2h
 mongodb-database-seed-l8lcb-vqc65   0/1       Completed   0          29s
 ----
-Let’s view the data that was added to the database by accessing a remote shell into the mongodb pod using the oc rsh command.
 
-* Execute the following command which will obtain the name of the running mongodb pod and start a remote shell session.
+Let’s view the data that was added to the database by accessing a remote shell into the mongodb pod using the `oc rsh` command.
+
+Execute the following command which will obtain the name of the running mongodb pod and start a remote shell session.
 
 [source,bash]
 ----
 $ oc rsh $(oc get pods -l=deploymentconfig=mongodb -o 'jsonpath={.items[0].metadata.name}')
 ----
+
 The DeploymentConfig defining the MongoDB application injects a series of environment variables containing the username, password and name of the primary database. +
 
-* Use these environment variables to connect to MongoDB.
+Use these environment variables to connect to MongoDB.
 
 [source,bash]
 ----
 $ mongo 127.0.0.1:27017/$MONGODB_DATABASE -u $MONGODB_USER -p $MONGODB_PASSWORD
+MongoDB shell version: 3.2.10
+connecting to: 127.0.0.1:27017/iotserverless
+Welcome to the MongoDB shell.
+For interactive help, type "help".
+For more comprehensive documentation, see
+	http://docs.mongodb.org/
+Questions? Try the support group
+	http://groups.google.com/group/mongodb-user
+> 
 ----
-The mongoimport command created a new collection called assets. +
 
-* Verify the contents of the collection by executing the following command:
+The mongoimport command created a new collection called _assets_. +
+
+Verify the contents of the collection by executing the following command:
 
 [source,bash]
 ----
 > db.assets.find()
+
+{ "_id" : ObjectId("5aee8bc9e0e39839766c3271"), "name" : "Chemical Pump LX-222", "location" : "Boiler room", "topic" : "/sf/boiler/pump-lx222", "center_latitude" : "37.784202", "center_longitude" : "-122.401858", "geofence_radius" : "3.0", "picture" : "Chemical-Pump.jpg" }
+{ "_id" : ObjectId("5aee8bc9e0e39839766c3272"), "name" : "Blow down separator valve VL-1", "location" : "Boiler room", "topic" : "/sf/boiler/separator-vl-1", "center_latitude" : "37.784215", "center_longitude" : "-122.401632", "geofence_radius" : "1.0", "picture" : "Blowdown-Valve.jpg" }
+{ "_id" : ObjectId("5aee8bc9e0e39839766c3273"), "name" : "Surface blow down controller", "location" : "Boiler room", "topic" : "/sf/boiler/controller", "center_latitude" : "37.784237", "center_longitude" : "-122.401410", "geofence_radius" : "1.0", "picture" : "Blowdown-Controller.jpg" }
+{ "_id" : ObjectId("5aee8bc9e0e39839766c3274"), "name" : "Condensate duplex pump", "location" : "Boiler room", "topic" : "/sf/boiler/cond-pump", "center_latitude" : "37.784269", "center_longitude" : "-122.401302", "geofence_radius" : "3.0", "picture" : "Condensate-Pump.jpg" }
+{ "_id" : ObjectId("5aee8bc9e0e39839766c3275"), "name" : "Robotic arm joint RT-011", "location" : "Assembly section", "topic" : "/sf/assembly/robotic-joint", "center_latitude" : "37.784115", "center_longitude" : "-122.401380", "geofence_radius" : "1.0", "picture" : "Robotic-Arm.jpg" }
+{ "_id" : ObjectId("5aee8bc9e0e39839766c3276"), "name" : "Teledyne DALSA Camera", "location" : "Assembly section", "topic" : "/sf/assembly/camera", "center_latitude" : "37.784312", "center_longitude" : "-122.401241", "geofence_radius" : "1.0", "picture" : "Teledyne-Dalsa.jpg" }
+{ "_id" : ObjectId("5aee8bc9e0e39839766c3277"), "name" : "Lighting control unit RT-SD-1000", "location" : "Warehouse", "topic" : "/sf/warehouse/lighting-control", "center_latitude" : "37.784335", "center_longitude" : "-122.401159", "geofence_radius" : "4.0", "picture" : "Lighting-Control.JPG" }
+{ "_id" : ObjectId("5aee8bc9e0e39839766c3278"), "name" : "DIN Rail power supply 240-24", "location" : "Warehouse", "topic" : "/sf/warehouse/power-supply", "center_latitude" : "37.784393", "center_longitude" : "-122.401399", "geofence_radius" : "1.0", "picture" : "DIN-Rail.jpg" }
+
 ----
+
 If results were returned, Mongodb has been setup and configured successfully.
 
-* Type exit to exit out of the mongodb shell.
+Type `exit` to exit out of the mongodb shell.
 
-* Type exit again to return out of the pod shell.
-
+Type `exit` again to return out of the pod shell.
 
 
 == Creating OpenWhisk Entities
 
 === Actions
-Actions are functions that encapsulate code to be run on the OpenWhisk platform. An action can be written as a JavaScript, Swift, Python or PHP function, a Java method, any binary-compatible executable including Go programs and custom executables packaged as Docker containers.
+
+link:https://github.com/apache/incubator-openwhisk/blob/master/docs/actions.md[Actions] are functions that encapsulate code to be run on the OpenWhisk platform. An action can be written as a JavaScript, Swift, Python or PHP function, a Java method, any binary-compatible executable including Go programs and custom executables packaged as Docker containers.
 
 Actions can be explicitly invoked, or run in response to an event. Each run of an action results in an activation record that is identified by a unique activation ID. The input to an action and the result of an action are a dictionary of key-value pairs, where the key is a string and the value a valid JSON value. Actions can also be composed of calls to other actions or a defined sequence of actions.
 Developing A Simple JavaScript Action
 
-* To hold the custom assets that we will create during this lab, create a folder called workspace within the project folder.
+To hold the custom assets that we will create during this lab, create a folder called `workspace` within the project folder and change into this directory.
 
 [source,bash]
 ----
-$ mkdir -p /home/cloud-user/iot-serverless/workspace
+$ mkdir -p /home/lab-user/iot-serverless/workspace
+$ cd /home/lab-user/iot-serverless/workspace
 ----
+
 First, a simple JavaScript function will be used to illustrate how to create an invoke actions. When invoked, the action will return a “Hello World” style response.
 
-* Create a file called hello_openwhisk.js in the workspace folder with the following content.
+Create a file called `hello_openwhisk.js` in the workspace folder with the following content.
 
 .hello_openwhisk.js
 [source,javascript]
 ----
 function main() {
-    return {payload: 'Welcome to IoT Serverless Lab!’};
+    return {payload: "Welcome to IoT Serverless Lab!"};
 }
 ----
 
-* With the content of the function created, use the wsk tool to create an action called hello_openwhisk
+With the content of the function created, use the wsk tool to create an action called _hello_openwhisk_
 
 [source,bash]
 ----
 $ wsk -i action update hello_openwhisk hello_openwhisk.js
+
+ok: updated action hello_openwhisk
 ----
 
 Note: The update subcommand of action performs an upsert. If an action does not exist, one will be created. If an action does exist, it will be updated.
@@ -453,21 +490,17 @@ Finally, invoke the action using the following command:
 [source,bash]
 ----
 $ wsk -i action invoke hello_openwhisk --result
-----
-NOTE: Using the --result flag will cause the command to wait until the function completes and print the result
 
-The following will be printed signaling the successful execution of the action:
-
-[source,javascript]
-----
 {
     "payload": "Welcome to IoT Serverless Lab!"
 }
 ----
 
+NOTE: Using the `--result` flag will cause the command to wait until the function completes and print the result
+
 ==== Working With Action Parameters
 
-Actions can also accept input parameters that can be used to drive the execution. To illustrate this use case, create a new file called topicReplace.js that will contain an action that will replace any periods in a parameter called topic with forward slashes.
+Actions can also accept input parameters that can be used to drive the execution. To illustrate this use case, create a new file called `topicReplace.js` that will contain an action that will replace any periods in a parameter called topic with forward slashes.
 
 [source,JavaScript]
 ----
@@ -481,37 +514,47 @@ function main(params) {
     return params;
   }
 ----
+
 NOTE: Notice how the main method now contains a function parameter which will include any input parameters to the function.
 
-* Now, create an action called topicReplace using the following command:
+Now, create an action called _topicReplace_ using the following command:
 
 [source,bash]
 ----
 $ wsk -i action update topicReplace topicReplace.js
+
+ok: updated action topicReplace
 ----
 
-* Parameters can be passed to actions using the --param flag. Verify the action executes correctly by providing a parameter called topic with the content containing periods. The response returned should replace periods with slashes:
+Parameters can be passed to actions using the `--param` flag. Verify the action executes correctly by providing a parameter called topic with the content containing periods. The response returned should replace periods with slashes:
 
 [source,bash]
 ----
 $ wsk -i action invoke topicReplace --result --param topic "1.2 of 8 is 4"
+
+{
+    "topic": "1/2 of 8 is 4"
+}
 ----
 
 Feel free to try different permutations of the parameters and their values. Note the parameters is only modified if the topic parameter is used and contains a period.
 
 == Organizing Resources as Packages
 
-Multiple related actions can be organized together into packages. Packages allow for common sets of resources, such as parameters, to be applied to multiple actions. A package can be used to centralize many of the components that will be used throughout the rest of the lab.
+Multiple related actions can be organized together into link:https://github.com/apache/incubator-openwhisk/blob/master/docs/packages.md[packages]. Packages allow for common sets of resources, such as parameters, to be applied to multiple actions. A package can be used to centralize many of the components that will be used throughout the rest of the lab.
 
-* Create a package called iot-serverless:
+Create a package called _iot-serverless_:
 
 [source,bash]
 ----
 $ wsk -i package create --shared yes iot-serverless
+
+ok: created package iot-serverless
 ----
+
 NOTE: The shared flag allows the package to be visible globally
 
-* Use the package list command to view the newly created package as well as the other packages included by default with the platform
+Use the `package list` command to view the newly created package as well as the other packages included by default with the platform
 
 [source,bash]
 ----
@@ -520,88 +563,113 @@ $ wsk -i package list
 
 === Adding an Action to the Package
 
-Previously, we created a few actions. One of which was called formatInput. By default, actions are created in the default whisk.system package. The action was fairly simple and replaced the values of the topic parameter containing periods to slashes.
+Previously, we created a few actions. One of which was called _topicReplace_. By default, actions are created in the default whisk.system package. The action was fairly simple and replaced the values of the topic parameter containing periods to slashes.
 
-* Since a new package iot-serverless was created, delete the existing formatInput action so that we can organize resource more effectively
-
-[source,bash]
-----
-$ wsk -i action delete formatInput
-----
-Aside from the topic name, another key component of input that we are concerned about is the the current location of an asset. The IoT data in this lab provides the latitude and longitude as a single value called data separated by a space. To format both, the topic name as demonstrated earlier, and latitude and longitude values, a JavaScript function is available in a file called iot-serverless-openwhisk-functions/format/formatInput.js
-
-* Create an improved formatInput action using the aforementioned JavaScript file using the following command:
+* Since a new package _iot-serverless_ was created, delete the existing _topicReplace_ action so that we can organize resources more effectively
 
 [source,bash]
 ----
+$ wsk -i action delete topicReplace
+
+ok: deleted action topicReplace
+----
+
+Aside from the topic name, another key component of input that we are concerned about is the the current location of an asset. The IoT data in this lab provides the latitude and longitude as a single value called data separated by a space. To format both, the topic name as demonstrated earlier, and latitude and longitude values, a JavaScript function is available in a file called `iot-serverless-openwhisk-functions/format/formatInput.js`
+
+From the root of the project, create an improved action using the aforementioned JavaScript file using the following command:
+
+[source,bash]
+----
+$ cd /home/lab-user/iot-serverless
 $ wsk -i action update iot-serverless/formatInput iot-serverless-openwhisk-functions/format/formatInput.js
+
+ok: updated action iot-serverless/formatInput
 ----
 
-* Now, display the contents of the package which will show the action which was just created
+Now, display the contents of the package which will show the action which was just created
 
 [source,bash]
 ----
 $ wsk -i package get iot-serverless --summary
+
+package /whisk.system/iot-serverless
+   (parameters: none defined)
+ action /whisk.system/iot-serverless/formatInput
+   (parameters: none defined)
 ----
 
 == Introduction to Triggers
 
-Thus far, we have explicitly invoked actions containing our business logic. In a microservices world, architectures have adopted the use of eventing or reactive patterns to invoke business logic instead of proactive based approaches.
+Thus far, we have explicitly invoked actions containing our business logic. In a microservices world, architectures have adopted the use of eventing or link:https://www.reactivemanifesto.org/[reactive] patterns to invoke business logic instead of proactive based approaches.
 
-In OpenWhisk, to support this architectural approach, Triggers represent a class of events emitted by event source e.g. location coordinates from factory assets. Triggers can be fired manually or in response to certain events.
+In OpenWhisk, to support this architectural approach, link:https://github.com/apache/incubator-openwhisk/blob/master/docs/triggers_rules.md[Triggers] represent a class of events emitted by event source e.g. location coordinates from factory assets. Triggers can be fired manually or in response to certain events.
 
-* To demonstrate how triggers can be utilized, let’s go ahead and create a trigger called iotServerlessTrigger
+To demonstrate how triggers can be utilized, let’s go ahead and create a trigger called _iotServerlessTrigger_
 
 [source,bash]
 ----
 $ wsk -i trigger create iotServerlessTrigger
+
+ok: created trigger iotServerlessTrigger
 ----
 
-* Confirm the trigger has been created by listing the defined triggers
+Confirm the trigger has been created by listing the defined triggers
 
 [source,bash]
 ----
 $ wsk -i trigger list
+
+triggers
+/whisk.system/iotServerlessTrigger                                     private
 ----
 
 == Connecting Triggers to Actions Using Rules
 
-While triggers maintain sourcing events within OpenWhisk, they have no effective use until they are connected with an action. This is where Rules comes into play. Rules associate a single trigger with a single action. When a trigger is fired, a rule will pass the invocation to the action.
+While triggers maintain sourcing events within OpenWhisk, they have no effective use until they are connected with an action. This is where link:https://github.com/apache/incubator-openwhisk/blob/master/docs/triggers_rules.md[Rules] comes into play. Rules associate a single trigger with a single action. When a trigger is fired, a rule will pass the invocation to the action.
 
-* To demonstrate how Rules are utilized in OpenWhisk, create a new rule that associates the iotServerlessTrigger trigger to the formatInput action within the iot-serverless package called iotServerlessRule:
+To demonstrate how Rules are utilized in OpenWhisk, create a new rule that associates the _iotServerlessTrigger_ trigger to the _formatInput_ action within the _iot-serverless_ package called _iotServerlessRule_:
 
 [source,bash]
 ----
 $ wsk -i rule update iotServerlessRule iotServerlessTrigger iot-serverless/formatInput
-----
-Now that the trigger has been connected to action by way of the rule, we can demonstrate how OpenWhisk utilizes this pattern by “firing” the trigger. Recall, the formatInput action requires two parameters be specified: topic and data.
 
-* Invoke the trigger as shown below:
+ok: updated rule iotServerlessRule
+----
+N
+ow that the trigger has been connected to action by way of the rule, we can demonstrate how OpenWhisk utilizes this pattern by “firing” the trigger. Recall, the formatInput action requires two parameters be specified: topic and data.
+
+Invoke the trigger as shown below:
 
 [source,bash]
 ----
 $ wsk -i trigger fire iotServerlessTrigger --param topic /sf/boiler/controller --param data "37.784237 -122.401410"
+
+ok: triggered /_/iotServerlessTrigger with id 2f195129de6e410f995129de6e210f88
 ----
 
-=== Activations
+=== Activation Record
 
-When the trigger was invoked the returned response was similar to the following:
+When the trigger was invoked, the referenced _id_ refers to an link:https://github.com/apache/incubator-openwhisk/blob/master/docs/reference.md[Activation Record] which confirms the request was accepted by OpenWhisk. When we invoked the action previously, we also passed in the `--result` flag which tells OpenWhisk to monitor the action and wait for a response to be produced. Since triggers do not produce a result as it is the Rule that performs the work of invoking the action,  we will have to investigate the activation chain to discover the result of the action.
 
-[source,bash]
-----
-ok: triggered /_/iotServerlessTrigger with id 94767a28d47c42dbb67a28d47c22db63
-----
-
-The id refers to an Activation which confirms the request was accepted by OpenWhisk. When we invoked the action previously, we also passed in the --result flag which tells OpenWhisk to monitor the action and wait for a response to be produced. Since triggers do not produce a result as it is the Rule that performs the work of invoking the action, so we will have to investigate the activation chain to discover the result of the action.
-
-* The details of the activation can be found by using the following command replacing the id from the prior command:
+The details of the activation can be found by using the following command replacing the id from the prior command:
 
 [source,bash]
 ----
 $ wsk -i activation get <ID>
 ----
-Inside the activation response, you will notice in the logs property a JSON payload that illustrates the response that was returned from the invocation of the action. Inside this payload includes the activationId that can be used to obtain the result from the formatInput action.
-* Once again, query the activation, but this time using the activationId that is present in the logs field from the prior invocation:
+
+Inside the activation response, you will notice in the _logs_ property a JSON payload that illustrates the response that was returned from the invocation of the action. Inside this payload includes the _activationId_ that can be used to obtain the result from the _formatInput_ action as shown below.
+
+[source,bash]
+----
+...
+    "logs": [
+        "{\"statusCode\":0,\"success\":true,\"activationId\":\"26fef4e532f34a41bef4e532f39a41b9\",\"rule\":\"whisk.system/iotServerlessRule\",\"action\":\"whisk.system/iot-serverless/formatInput\"}"
+    ],
+...
+----
+
+Once again, query the activation, but this time using the activationId that is present in the logs field from the prior invocation:
 
 [source,bash]
 ----
@@ -610,7 +678,7 @@ $ wsk -i activation get <ID>
 
 * Inside the response field will be the result of the formatInput action similar to the following
 
-[source, Ruby]
+[source,bash]
 ----
     "response": {
         "status": "success",
@@ -625,7 +693,7 @@ $ wsk -i activation get <ID>
     },
 ----
 
-As displayed, the parameters that were provided to the trigger were sent to the formatInput action by way of the rule that we defined and the latitude and longitude fields were split out as expected based on the values provided in the data field.
+As displayed, the parameters that were provided to the trigger were sent to the _formatInput_ action by way of the rule that we defined and the latitude and longitude fields were split out as expected based on the values provided in the data field.
 
 === Developing a Node.js Action to Enrich Input
 
