--- a/labs/tech_overview.adoc
+++ b/labs/tech_overview.adoc
@@ -1,3 +1,7 @@
+:imagesdir: images
+:icons: font
+:source-highlighter: prettify
+
 = Technology Overview
 
 == Serverless
@@ -33,3 +37,6 @@ In this lab, an IoT solution will be built with Red Hat OpenShift Container Plat
 
 Reference:
 link:https://github.com/cncf/wg-serverless/tree/master/whitepaper[https://github.com/cncf/wg-serverless/tree/master/whitepaper]
+
+[.text-center]
+image:icons/icon-previous.png[align=left, width=128, link=lab_content.html] image:icons/icon-home.png[align="center",width=128, link=lab_content.html] image:icons/icon-next.png[align="right"width=128, link=iot_usecase.html]
