--- a/labs/lab_3.adoc
+++ b/labs/lab_3.adoc
@@ -64,7 +64,6 @@ Actions can also accept input parameters that can be used to drive the execution
 ----
 function main(params) {
 
-    // Format the Topic to replace . with /
     if(params.topic) {
       params.topic = params.topic.replace(/[.]/g,'/');
     }
@@ -99,7 +98,7 @@ Feel free to try different permutations of the parameters and their values. Note
 
 == Organizing Resources as Packages
 
-Multiple related actions can be organized together into link:https://github.com/apache/incubator-openwhisk/blob/master/docs/packages.md[packages]. Packages allow for common sets of resources, such as parameters, to be applied to multiple actions. A package can be used to centralize many of the components that will be used throughout the rest of the lab.
+Multiple related actions can be organized together into **link:https://github.com/apache/incubator-openwhisk/blob/master/docs/packages.md[Packages]**. Packages allow for common sets of resources, such as parameters, to be applied to multiple actions. A package can be used to centralize many of the components that will be used throughout the rest of the lab.
 
 Create a package called _iot-serverless_:
 
@@ -160,7 +159,7 @@ package /whisk.system/iot-serverless
 
 Thus far, we have explicitly invoked actions containing our business logic. In a microservices world, architectures have adopted the use of eventing or link:https://www.reactivemanifesto.org/[reactive] patterns to invoke business logic instead of proactive based approaches.
 
-In OpenWhisk, to support this architectural approach, link:https://github.com/apache/incubator-openwhisk/blob/master/docs/triggers_rules.md[Triggers] represent a class of events emitted by event source e.g. location coordinates from factory assets. Triggers can be fired manually or in response to certain events.
+In OpenWhisk, to support this architectural approach, **link:https://github.com/apache/incubator-openwhisk/blob/master/docs/triggers_rules.md[Triggers]** represent a class of events emitted by event source e.g. location coordinates from factory assets. Triggers can be fired manually or in response to certain events.
 
 To demonstrate how triggers can be utilized, let’s go ahead and create a trigger called _iotServerlessTrigger_
 
@@ -183,7 +182,9 @@ triggers
 
 == Connecting Triggers to Actions Using Rules
 
-While triggers maintain sourcing events within OpenWhisk, they have no effective use until they are connected with an action. This is where link:https://github.com/apache/incubator-openwhisk/blob/master/docs/triggers_rules.md[Rules] comes into play. Rules associate a single trigger with a single action. When a trigger is fired, a rule will pass the invocation to the action.
+While triggers maintain sourcing events within OpenWhisk, they have no effective use until they are connected with an action. This is where **link:https://github.com/apache/incubator-openwhisk/blob/master/docs/triggers_rules.md[Rules]** comes into play. Rules associate a single trigger with a single action. When a trigger is fired, a rule will pass the invocation to the action.
+
+image::trigger-rule-action.png[]
 
 To demonstrate how Rules are utilized in OpenWhisk, create a new rule that associates the _iotServerlessTrigger_ trigger to the _formatInput_ action within the _iot-serverless_ package called _iotServerlessRule_:
 
@@ -207,7 +208,7 @@ ok: triggered /_/iotServerlessTrigger with id 2f195129de6e410f995129de6e210f88
 
 === Activation Record
 
-When the trigger was invoked, the referenced _id_ refers to an link:https://github.com/apache/incubator-openwhisk/blob/master/docs/reference.md[Activation Record] which confirms the request was accepted by OpenWhisk. When we invoked the action previously, we also passed in the `--result` flag which tells OpenWhisk to monitor the action and wait for a response to be produced. Since triggers do not produce a result as it is the Rule that performs the work of invoking the action,  we will have to investigate the activation chain to discover the result of the action.
+When the trigger was invoked, the referenced _id_ refers to an **link:https://github.com/apache/incubator-openwhisk/blob/master/docs/reference.md[Activation Record]** which confirms the request was accepted by OpenWhisk. When we invoked the action previously, we also passed in the `--result` flag which tells OpenWhisk to monitor the action and wait for a response to be produced. Since triggers do not produce a result as it is the Rule that performs the work of invoking the action,  we will have to investigate the activation chain to discover the result of the action.
 
 The details of the activation can be found by using the following command replacing the id from the prior command:
 
@@ -234,7 +235,7 @@ Once again, query the activation, but this time using the activationId that is p
 $ wsk -i activation get <ID>
 ----
 
-* Inside the response field will be the result of the formatInput action similar to the following
+Inside the response field will be the result of the formatInput action similar to the following
 
 [source,bash]
 ----
@@ -255,9 +256,9 @@ As displayed, the parameters that were provided to the trigger were sent to the 
 
 === Developing a Node.js Action to Enrich Input
 
-In a prior lab, we introduced how to create simple OpenWhisk actions using JavaScript. While standalone JavaScript actions are very lightweight, they do have limitations in the functionality that they are able to provide, especially when additional libraries or dependencies are required. A popular pattern for transmitting data is to pass along a key and perform a lookup in a database to enrich content. In this section, you will configure a Node.js based action to lookup content in the the MongoDB database that was previously seeded with values based on an input parameter. The values contained within the document will be appended to the input parameters and returned as output.
+In a prior lab, we introduced how to create simple OpenWhisk actions using JavaScript. While standalone JavaScript actions are very lightweight, they do have limitations in the functionality that they are able to provide, especially when additional libraries or dependencies are required. A popular pattern for transmitting data is to pass along a key and perform a lookup in a database to enrich content. In this section, you will configure a link:https://nodejs.org/en/[Node.js] based action to lookup content in the the MongoDB database that was previously seeded with values based on an input parameter. The values contained within the link:https://docs.mongodb.com/manual/core/document/[document] from MongoDB will be appended to the input parameters and returned as output.
 
-* First, from the root of the project folder, navigate to the folder containing the source for the Node.js based function:
+First, from the root of the project folder, navigate to the folder containing the source for the Node.js based action:
 
 [source,bash]
 ----
@@ -266,14 +267,16 @@ $ cd iot-serverless-openwhisk-functions/enricher
 
 Within this folder, you will notice three files:
 
-package.json - npm manifest file
-enricher.js - OpenWhisk function
-example.env - Sample file that will be used as a base for providing environment variables for the function
+* `package.json` - link:https://docs.npmjs.com/files/package.json[npm manifest file]
+* `enricher.js` - OpenWhisk action
+* `example.env`` - Sample file that will be used as a base for providing environment variables for the function
 
 Take a moment to explore each of these files and their contents
-One of the principles of reusable software is to externalize configurations outside of the source code. To connect to MongoDB from the function, the properties related to the location of the database and credentials must be provided. Node.js offers the functionality to externalize these values in a file called .env alongside the application. At runtime, the values provided will be available as environment variables for the application to leverage. An file called example.env has been provided with the keys that require configuration.
+One of the principles of reusable software is to externalize configurations outside of the source code. To connect to MongoDB from the function, the properties related to the location of the database and credentials must be provided. Node.js offers the functionality to externalize these values in a file called _.env_ alongside the application. At runtime, the values provided will be available as environment variables for the application to leverage. 
 
-* Edit the file to contain the following values based on the configuration of MongoDB
+A file called `example.env` has been provided with the keys that require configuration.
+
+Edit the _example.env_ file to update the values based on the configuration of MongoDB
 
 [source,bash]
 ----
@@ -283,81 +286,124 @@ MONGODB_PASSWORD=iot-serverless
 MONGODB_DATABASE=iotserverless
 ----
 
-* Rename the file to .env so that the values will be available to the function
+Rename the `example.env` file to `.env` so that the values will be available to the function
 
 [source,bash]
 ----
 $ mv example.env .env
 ----
-* Install all of the dependencies that are defined in the package.json file
+
+Using `npm`, install all of the dependencies that are defined in the _package.json_ file
 
 [source,bash]
 ----
 $ npm install
 ----
 
-* Now, package up the Node.js application
+Now, package up the Node.js application
 
 [source,bash]
 ----
 $ npm run package
 ----
-A new file called enricher.zip will be created in the dist folder. This will be uploaded to OpenWhisk as the content used by the function.
 
-* Create a new function called enricher by executing the following command
+NOTE: The `npm run` allows for arbitrary commands or scripts to be executed to simplify user interaction. To view the command that is being executed, check out the _scripts_ property within the _package.json_ file
+
+As a result of the execution new file called _enricher.zip_ will be created in the _dist_ folder. This will be the file that will be uploaded to OpenWhisk as the content used by the action.
+
+Create a new action called _enricher_ by executing the following command:
 
 [source,bash]
 ----
 $ npm run deploy
+
+> iot-serverless-openwhisk-functions-enricher@1.0.0 deploy /home/lab-user/iot-serverless/iot-serverless-openwhisk-functions/enricher
+> wsk -i action update iot-serverless/enricher dist/enricher.zip --kind nodejs:8
+
+ok: updated action iot-serverless/enricher
 ----
-Internally, npm runs the command wsk -i action update iot-serverless/enricher dist/enricher.zip --kind nodejs:8. The npm run deploy is a convenience method to simplifying the creation of the function.
 
-With the function deployed, let’s test it out.
+As observed in the output from the above command, `wsk -i action update iot-serverless/enricher dist/enricher.zip --kind nodejs:8` was executed. The `--kind` flag informs OpenWhisk the framework to utilize.
 
-The MongoDB has a collection called assets which was populated with data earlier. Inside this collection, a column called topic specifies the name of the topic associated with the particular asset (more on that later). The enricher function will accept a parameter called topic and perform a lookup on the collection for any document matching the value and return the contents of the document.
+With the action created, let’s test it out.
 
-* Once again, view the contents of the assets table by executing the following command:
+The MongoDB has a _collection_ called _assets_ which was populated with data in an earlier lab. Inside this collection, a column called _topic_ specifies the name of the topic associated with the particular asset (more on that later). The enricher function will accept a parameter called _topic_ and perform a lookup on the collection for any document matching the value and return the contents of the document.
+
+Once again, view the contents of the assets table by executing the following command:
 
 [source,bash]
 ----
 $ oc rsh $(oc get pods -l=deploymentconfig=mongodb -o 'jsonpath={.items[0].metadata.name}') bash -c "mongo 127.0.0.1:27017/\${MONGODB_DATABASE} -u \${MONGODB_USER} -p \${MONGODB_PASSWORD} --eval='db.assets.find()'"
+
+MongoDB shell version: 3.2.10
+connecting to: 127.0.0.1:27017/iotserverless
+{ "_id" : ObjectId("5aef3736e91e408be1f42bac"), "name" : "Chemical Pump LX-222", "location" : "Boiler room", "topic" : "/sf/boiler/pump-lx222", "center_latitude" : "37.784202", "center_longitude" : "-122.401858", "geofence_radius" : "3.0", "picture" : "Chemical-Pump.jpg" }
+{ "_id" : ObjectId("5aef3736e91e408be1f42bad"), "name" : "Blow down separator valve VL-1", "location" : "Boiler room", "topic" : "/sf/boiler/separator-vl-1", "center_latitude" : "37.784215", "center_longitude" : "-122.401632", "geofence_radius" : "1.0", "picture" : "Blowdown-Valve.jpg" }
+{ "_id" : ObjectId("5aef3736e91e408be1f42bae"), "name" : "Surface blow down controller", "location" : "Boiler room", "topic" : "/sf/boiler/controller", "center_latitude" : "37.784237", "center_longitude" : "-122.401410", "geofence_radius" : "1.0", "picture" : "Blowdown-Controller.jpg" }
+{ "_id" : ObjectId("5aef3736e91e408be1f42baf"), "name" : "Condensate duplex pump", "location" : "Boiler room", "topic" : "/sf/boiler/cond-pump", "center_latitude" : "37.784269", "center_longitude" : "-122.401302", "geofence_radius" : "3.0", "picture" : "Condensate-Pump.jpg" }
+{ "_id" : ObjectId("5aef3736e91e408be1f42bb0"), "name" : "Robotic arm joint RT-011", "location" : "Assembly section", "topic" : "/sf/assembly/robotic-joint", "center_latitude" : "37.784115", "center_longitude" : "-122.401380", "geofence_radius" : "1.0", "picture" : "Robotic-Arm.jpg" }
+{ "_id" : ObjectId("5aef3736e91e408be1f42bb1"), "name" : "Teledyne DALSA Camera", "location" : "Assembly section", "topic" : "/sf/assembly/camera", "center_latitude" : "37.784312", "center_longitude" : "-122.401241", "geofence_radius" : "1.0", "picture" : "Teledyne-Dalsa.jpg" }
+{ "_id" : ObjectId("5aef3736e91e408be1f42bb2"), "name" : "Lighting control unit RT-SD-1000", "location" : "Warehouse", "topic" : "/sf/warehouse/lighting-control", "center_latitude" : "37.784335", "center_longitude" : "-122.401159", "geofence_radius" : "4.0", "picture" : "Lighting-Control.JPG" }
+{ "_id" : ObjectId("5aef3736e91e408be1f42bb3"), "name" : "DIN Rail power supply 240-24", "location" : "Warehouse", "topic" : "/sf/warehouse/power-supply", "center_latitude" : "37.784393", "center_longitude" : "-122.401399", "geofence_radius" : "1.0", "picture" : "DIN-Rail.jpg" }
+
 ----
-* Select one of the topic values returned and invoke the enricher function (for example, ‘/sf/boiler/pump-lx222’ topic name)
+
+NOTE: The prior command utilized several OpenShift features to reduce the number of steps needed to returned the desired results. In particular, OpenShift label filtering was used to limit the results along with output parsing using link:https://kubernetes.io/docs/reference/kubectl/jsonpath/[jsonpath] to extract the name of the pod returned from the filtered list
+
+
+Select one of the topic values returned and invoke the enricher function (for example, ‘/sf/boiler/pump-lx222’)
 
 [source,bash]
 ----
-$ wsk -i action invoke iot-serverless/enricher --param topic “/sf/boiler/pump-lx222” --result
+$ wsk -i action invoke iot-serverless/enricher --param topic /sf/boiler/pump-lx222 --result
+
+{
+    "center_latitude": "37.784202",
+    "center_longitude": "-122.401858",
+    "geofence_radius": "3.0",
+    "location": "Boiler room",
+    "name": "Chemical Pump LX-222",
+    "picture": "Chemical-Pump.jpg",
+    "topic": "/sf/boiler/pump-lx222"
+}
 ----
-Notice how the content of the document has been returned. Feel free to use another topic name from the database results as well as a value that is not present in the database. Only the input value will be returned.
+
+Notice how the content of the document has been returned. Feel free to use another topic name from the database results to fully test out the functionality of the action. Be sure to also use a topic value that is not in the collection as only the input value will be returned.
 
 == Creating a Sequence of Actions
 
-Thus far, we have created two functions, one that will perform input formatting, and another that will execute a lookup from the database based on provided values. Whether you have noticed or not, several of the parameter names have been identical (such as topic). This is no coincidence. OpenWhisk provides the capability chaining multiple actions together where the output from one action is the input for another action. This functionality is known as a Sequence. Sequences are entirely separate actions and define the order in which actions are executed.
+Thus far, we have created two functions, one that will perform input formatting, and another that will execute a lookup from the database based on provided values. Whether you have noticed or not, several of the parameter names have been identical (such as _topic_). This is no coincidence. OpenWhisk provides the capability chaining multiple actions together where the output from one action is the input for another action. This functionality is known as a **Sequence**. Sequences are entirely separate actions and define the order in which actions are executed.
 
-* Create a new sequence action called IotServerlessSequence in the iot-serverless package that will first call formatInput action and then use the output as the input parameters for the enricher action.
+Create a new sequence action called _iotServerlessSequence_ in the _iot-serverless_ package that will first call _formatInput_ action first and then use the output as the input parameters for the _enricher_ action.
 
 [source,bash]
 ----
 $ wsk -i action update iot-serverless/iotServerlessSequence --sequence iot-serverless/formatInput,iot-serverless/enricher
+
+ok: updated action iot-serverless/iotServerlessSequence
 ----
 
-* With a new method for initiating the action to format the input, update the iotServerlessRule to invoke the iotServerlessSequence sequence action instead of directly calling the formatInput action:
+With a new method for initiating the action to format the input using a sequence, update the _iotServerlessRule_ to invoke the _iotServerlessSequence_ sequence action instead of directly calling the _formatInput_ action:
 
 [source,bash]
 ----
 $ wsk -i rule update iotServerlessRule iotServerlessTrigger iot-serverless/iotServerlessSequence
+
+ok: updated rule iotServerlessRule
 ----
 
-* Fire the trigger using the same parameters as before
+Fire the trigger using the same parameters as before
 
 [source,bash]
 ----
 $ wsk -i trigger fire iotServerlessTrigger --param topic /sf/boiler/controller --param data "37.784237 -122.401410"
+
+ok: triggered /_/iotServerlessTrigger with id 33d809d6923c456a9809d6923c156ad5
 ----
 
-* Once again the id of the activation of the trigger will be returned. Using the steps from the Activations section, locate the activationId within the trigger activation to determine the output from the execution of the sequence action. A value similar to the following indicates the sequence action processed successfully.
+Once again the id of the activation of the trigger will be returned. Using the steps from the Activations section, locate the activationId within the trigger activation to determine the output from the execution of the sequence action. A value similar to the following indicates the sequence action processed successfully.
 
-[source, Ruby]
+[source,bash]
 ----
     "response": {
         "status": "success",
@@ -382,8 +428,8 @@ $ wsk -i trigger fire iotServerlessTrigger --param topic /sf/boiler/controller -
     ],
 ----
 
-Notice how latitude and longitude have been split out into separate fields as per the logic of the formatInput action along with values returned from MongoDB as provided by theIenricher action.
-In addition, there is a field called logs containing two values. Those are the activation ID’s from the execution of each function in the sequence action. Feel free to view the execution of those actions as well.
+Notice how latitude and longitude have been split out into separate fields as per the logic of the _formatInput_ action along with values returned from MongoDB as provided by _enricher_ action.
+In addition, there is a field called _logs_ containing two values. Those are the activation ID’s from the execution of each action in the sequence action. Feel free to view the execution of those actions as well.
 
 [.text-center]
 image:icons/icon-previous.png[align=left, width=128, link=lab_2.html] image:icons/icon-home.png[align="center",width=128, link=lab_content.html] image:icons/icon-next.png[align="right"width=128, link=lab_4.html]
